WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108178
Compilation warning in JSC
https://bugs.webkit.org/show_bug.cgi?id=108178
Summary
Compilation warning in JSC
Mikhail Pozdnyakov
Reported
2013-01-29 03:48:32 PST
WebKit builds on EFL bots fail due to following compilation warning: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/Source/JavaScriptCore/runtime/Structure.cpp: In constructor ‘JSC::Structure::Structure(JSC::JSGlobalData&, JSC::JSGlobalObject*, JSC::JSValue, const JSC::TypeInfo&, const JSC::ClassInfo*, JSC::IndexingType, unsigned int)’: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/Source/JavaScriptCore/runtime/Structure.cpp:175:25: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare] cc1plus: all warnings being treated as errors
http://build.webkit.org/builders/EFL%20Linux%2064-bit%20Debug%20WK2/builds/8704/steps/compile-webkit/logs/stdio
Attachments
patch
(1.50 KB, patch)
2013-01-29 03:59 PST
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Pozdnyakov
Comment 1
2013-01-29 03:59:13 PST
Created
attachment 185215
[details]
patch
Kentaro Hara
Comment 2
2013-01-29 04:20:36 PST
Comment on
attachment 185215
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=185215&action=review
looks ok.
> Source/JavaScriptCore/ChangeLog:3 > + Compilation warning in JSC
From next time, you might want to mention what revision caused the regression. (
r141050
in this case.)
WebKit Review Bot
Comment 3
2013-01-29 04:55:31 PST
Comment on
attachment 185215
[details]
patch Clearing flags on attachment: 185215 Committed
r141099
: <
http://trac.webkit.org/changeset/141099
>
WebKit Review Bot
Comment 4
2013-01-29 04:55:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug