Compilation warning in JSC https://bugs.webkit.org/show_bug.cgi?id=108178

Reviewed by Kentaro Hara.

Fixed 'comparison between signed and unsigned integer' warning in JSC::Structure constructor.

* runtime/Structure.cpp:
(JSC::Structure::Structure):


Canonical link: https://commits.webkit.org/126401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141099 268f45cc-cd09-0410-ab3c-d52691b4dbfc